tests/ui/const-generics/occurs-check/unify-n-nplusone.stderr
error[E0308]: mismatched types
  --> $DIR/unify-n-nplusone.rs:14:11
   |
LL |     arr = bind(arr);
   |           ^^^^^^^^^ encountered a self-referencing constant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
